moth_web_v1/static/moth_web_v1/style.css
/*
Light blue: #96d1e3
Off-white blue: #b9e0ef
Dark brown: #35170c
Light brown: #432115
Tan: #e1caa5
*/

@import "fonts/maven_pro.css";

html {
  background: #35170c url(images/background.png) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
/*	min-height: 100%;*/
	font-family: "Maven Pro", Ubuntu, sans-serif;
	overflow-y: auto;
}

h1, h2, h3 {
	color: #AD6F15;
	font-family: "Maven Pro", Ubuntu, sans-serif;
	font-weight: bold;
}

body > h1:first-child {
	color: #96d1e3;
	font-size: 3em;
	border-radius: 0.2em;
	padding: 0 0.3em;
	text-align: center;
	max-width: 66%;
	margin: 0.5em auto;
}

body > h1:first-child img {
	max-width: 66%;
}

.readme, pre {
	background-color: #FFDAA3;
	border-radius: 0.5em;
}






input {
	font-family: "Maven Pro", Ubuntu, sans-serif;
}

a {
	color: #432115;
	text-decoration: underline;
}

a:hover {
	color: #9E1336;
}

a img {
	border: 0px;
}

pre {
	border: solid #ddc 2px;
	padding: 0.25em;
	font-family: "Ubuntu Mono", monospace;
	overflow: auto;
}

code, kbd, samp {
	font-family: "Ubuntu Mono", monospace;
}


th {
	vertical-align: top;
	text-align: center;
}
td {
	vertical-align: top;
	text-align: left;
}

dt {
	font-weight: bold;
}

p {
	line-height: 1.4em;
	margin-bottom: 20px;
}

hr {
	border: 1px solid #ddc;
}

#prompt {
	color: #0E7450;
	border-radius: 0.2em;
}

#cli {
	background: rgba(14, 116, 80, 0.2);
	color: #00120C;
	width: 100%;
	border: 0px;
	padding: 0.1em 0.1em;
}

#readme img {
	max-width: 100%;
	transition: all .2s ease;
}

#readme img:hover {
	transform: scale(1.5);
}

/**** Section ****/

section, nav, address {
	color: #35170c;
	max-width: 35em;
	border-radius: 0.6em;
	margin: 1em auto;
	padding: 0.5em;
}

section, address {
	background: #e1caa5;
}

/*** navigation bar ***/

nav {
	background: #b9e0ef;
}

nav h2 {
	display: none;
}

nav ul {
	list-style: none;
	text-align: center;
	padding: 0;
}

nav li {
	display: inline;
}

nav li a {
  text-transform: lowercase;
  font-size: 0.9em;
}

nav li + li:before {
	content: " | ";
}

#sponsors {
	background: #b9e0ef;
	text-align: center;
	opacity: 0.8;
}

#sponsors img {
	max-width: 20%;
	max-height: 5em;
}


/**** Terminal ****/

#terminal {
	padding: 10px;
	max-width: 35em;
	margin: 1em auto;
	border-radius: 1em;

}

#terminal #output {
	max-height: 20em;
	overflow-y: scroll;
}

#terminal #output::-webkit-scrollbar
{
	width: 0.7em;
}

#terminal #output::-webkit-scrollbar-track
{
	border-radius: 0.7em;
	background-color: rgba(173, 111, 21, 0.4);
}

#terminal #output::-webkit-scrollbar-thumb
{
	border-radius: 0.7em;
	background-color: #FFDAA3;
	border: solid rgba(173, 111, 21, 0.4) 1px;
}

/**** Scoreboard ****/

#scoreboard {
	width: 100%;
	clear: both;
	background: rgba(25, 0, 6, 0.8);
	border-radius: 2em;
}

#scoreboard span {
	font-size: 75%;
	display: inline-block;
	margin: 0;
	border: 0;
	overflow: hidden;
	height: 2.2em;
}

#scoreboard .teamname {
	font-size: 133%;
	color: white;
    text-shadow: 0 0 0.2em black;
	opacity: 0.8;
	position: absolute;
	right: 1em;
	height: 1.1em;
}

#scoreboard div * {white-space: nowrap;}
.cat0, .cat8, .cat16 {background-color: #a6cee3; color: black;}
.cat1, .cat9, .cat17 {background-color: #1f78b4; color: white;}
.cat2, .cat10, .cat18 {background-color: #b2df8a; color: black;}
.cat3, .cat11, .cat19 {background-color: #33a02c; color: white;}
.cat4, .cat12, .cat20 {background-color: #fb9a99; color: black;}
.cat5, .cat13, .cat21 {background-color: #e31a1c; color: white;}
.cat6, .cat14, .cat22 {background-color: #fdbf6f; color: black;}
.cat7, .cat15, .cat23 {background-color: #ff7f00; color: black;}


.wide {
	max-width: inherit;
}

.figure {
	margin: 0.5em 1em;
	float: right;
	font-size: small;
	text-align: center;
}

